@@ -1,13 +1,13 @@
 {
-  "timestamp" : "2022-11-03T01:25:05Z",
+  "timestamp" : "2022-11-03T08:23:14Z",
   "count_outdated" : 628,
   "uniques_outdated" : 360,
-  "count" : 665,
+  "count" : 664,
   "uniques" : 378,
   "clones" : [
     {
       "timestamp": "2022-10-20T00:00:00Z",
-      "count": 3,
+      "count": 2,
       "count_minmax": [ 1, 3 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
